package(default_visibility = ["//visibility:public"])

load("@external_binaries//:def.bzl", "binary_location")
load("@workspace//:def.bzl", "workspace_status")
load("//rules/kubecf:def.bzl", "image_cache_generator")
load(":def.bzl", "project")

workspace_status(
    name = "workspace_status",
)

[binary_location(
    name = "{name}_binary_location".format(name = name),
    binary = "@{}//:binary".format(name),
) for name in project.external_binaries]

image_cache_generator(
    name = "image_cache_generator",
    image_list = "//deploy/helm/kubecf:image_list",
    output = "image_repositories.bzl",
)
