package(default_visibility = ["//visibility:public"])

load("//rules/helm:def.bzl", helm_template = "template")
load("//rules/kubectl:def.bzl", kubectl_apply_binary = "apply", kubectl_delete_binary = "delete")
load("//:def.bzl", "project")

pkg_tar(
    name = "",
    package_dir = "assets",
    srcs = [
        "@cf_deployment//:cf_deployment",
    ],
)

helm_package(
    name = "chart",
    srcs = [
        ":chart_files_static",
    ],
    tars = [
        ":cf_deployment",
        "//bosh/releases:pre_render_scripts",
    ],
    chart_name = "scf",
    chart_version = "3.0.0",
    app_version = "2.0",
)

helm_template(
    name = "rendered_template",
    values = glob(["**/*values.yaml"]),
    install_name = "cf-operator",
    namespace = "{STABLE_KUBECF_NAMESPACE}",
    chart_package = "@cf_operator//file",
)

kubectl_apply_binary(
    name = "apply",
    resource = ":rendered_template",
    namespace = "${KUBECF_NAMESPACE}",
)

kubectl_delete_binary(
    name = "delete",
    resource = ":rendered_template",
    namespace = "${KUBECF_NAMESPACE}",
)
