package(default_visibility = ["//visibility:private"])

load(
    ":def.bzl",
    "helmlint",
    "shellcheck",
    "yamllint",
)

helmlint(
    name = "helmlint",
    chart = "//deploy/helm/kubecf:chart",
)

shellcheck(
    name = "shellcheck",
)

load("@subpar//:subpar.bzl", "par_binary")
load("@yamllint//:requirements.bzl", "all_requirements")

par_binary(
    name = "_yamllint",
    srcs = [":yamllint/run_yamllint.py"],
    main = "yamllint/run_yamllint.py",
    python_version = "PY3",
    deps = all_requirements,
)

yamllint(
    name = "yamllint",
    binary = ":_yamllint.par",
)
