load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["root.go"],
    importpath = "github.com/SUSE/kubecf/klog/cmd/klog",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/kube:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)
